# LeanKnowledge

./: .gitignore  CLAUDE.md  Plan_for_gemini.md  README.md  lakefile.toml  leanknowledge_architecture.mermaid
Current/: ARCHITECTURE.md  pitch.md  pyproject.toml
Current/prompts/: extraction_agent.md  proof_structurer.md  translator.md
Current/scripts/: download_proofwiki.py  gcp_setup.sh  run_proofwiki.py
Current/tests/: test_backlog.py  test_claim_agreement.py  test_compiler.py  test_errors.py  test_librarian.py  test_pdf_quality.py  test_pipeline.py  test_prompt_tuner.py  test_proof_structurer.py  test_proofwiki.py  test_repair_db.py  test_translator.py  test_triage.py
Previous/: ARCHITECTURE.md  INFERENCE.md  Plan_for_gemini.md  SERVER_FIXES.md  pyproject.toml
Previous/LeanProject/: Claim_5_AA_b.lean  Claim_5_C_d.lean  Claim_5_D_d.lean  Condition_5_D_1.lean  ContinuousUtility.lean  Proposition_3_C_1.lean  Proposition_5_F_1.lean  TopologyBridge.lean
Previous/citation_graph/: S2_API_GUIDELINES.md  build_graph.py  build_graph_openalex.py  build_graph_s2_authenticated.py  find_eve.py  find_journals.py  find_new_seeds.py  journal_map.json  map_oa_to_s2.py  merge_graphs.py  test_s2_key.py  update_queue_from_merge.py
Previous/prompts/: axiom_translation.md  feeder.md  knowledge_agent.md  librarian.md  proof_agent.md
Previous/rosetta_stone/: generate.py  structure_sheaf_output.json
Previous/scripts/: README.md  check_ready.py  convert_pdf.py  create_sample.py  dashboard.py  get_item_details.py  get_item_source.py  process_pdfs.py  run_mwg_batch.py  (+3 more)
(+147 files in other folders)
