[project]
name = "leanknowledge"
version = "0.1.0"
description = "LLM-powered formalization of mathematical theorems into verified Lean 4 code"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "requests>=2.32.5",
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "anthropic>=0.46.0",
    "litellm>=1.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=0.2.0"]
test = ["pytest>=8.0"]

[project.scripts]
leanknowledge = "leanknowledge.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leanknowledge"]
